syntax = "proto3";

option go_package = "github.com/handysuherman/clean-arch-payment-service/internal/pb";
import "google/protobuf/timestamp.proto";

message Customer {
    string uid = 1;
    string customer_app_id = 2;
    string payment_customer_id = 3;
    string customer_name = 4;
    google.protobuf.Timestamp created_at = 5;
    optional string email = 6;
    optional string phone_number = 7;
}